$Id$

2014-04-27  Alex Samorukov  <samm@os2.kiev.ua>

	drivedb.h:
	- Toshiba 3.5" MG03ACAxxx(Y) Enterprise HDD

2014-04-27  Christian Franke  <franke@computer.org>

	Fixes for aacraid patch:
	aacraid.h: Fix typo which breaks 32-bit build.
	os_linux.cpp:  Remove useless member variable afd.
	Fix error handling of /proc/devices parsing.
	Avoid unsafe sprintf().  Fix help text.

2014-04-27  Raghava Aditya  <raghava.aditya@pmcs.com>

	os_linux.cpp:
	- Added support for aacraid drivers
	- Created a new interface for aacraid
	         smartctl -d aacraid,H,L,ID /dev/sdx

2014-04-18  Douglas Gilbert  <dgilbert@interlog.com>

	scsicmds.cpp:
	- supported_vpd_pages(): lower response length to stop sense data
          noise on old disks (pre SPC-3)

2014-04-17  Christian Franke  <franke@computer.org>

	drivedb.h:
	- Western Digital RE4 (SATA 6Gb/s): WD2000FYYX
	- Western Digital Se
	- Western Digital Caviar Green (AF, SATA 6Gb/s): 4TB
	- Western Digital Black: Rename, add 3TB, AF, remove extra AF entry
	- Western Digital Red: 4TB (ticket #322)
	- Western Digital Blue Mobile

2014-04-10  Christian Franke  <franke@computer.org>

	os_win32.cpp: Rework CSMI port scanning.
	Use bPortIdentifier instead of Phy array index for addressing.
	Ignore possibly bogus bNumberOfPhys (ticket #325).

2014-04-09  Douglas Gilbert  <dgilbert@interlog.com>

	scsiprint.cpp:
	- add guard to scsiPrintSasPhy() invocation; resolve ticket #204

2014-04-06  Christian Franke  <franke@computer.org>

	WARNINGS: Remove all entries.  Add link to Warnings page in Wiki.

2014-03-13  Christian Franke  <franke@computer.org>

	drivedb.h:
	- Crucial/Micron RealSSD C300/M500: *SSD1 variant
	- SandForce Driven SSDs: ADATA SP300, ADATA SP800, ADATA SP900 DL2,
	Corsair Force SSD, Kingston SE50S3, Kingston SKC380S3,
	Smart Storage XceedIOPS2, VisionTek GoDrive
	- Indilinx Barefoot 3 based SSDs: OCZ VERTEX 450
	- JMicron based SSDs: ADATA SP600
	- Plextor M3/M5 (Pro) Series SSDs: Rename, add M5S (ticket #297), M5Pro
