@@ -1,5 +1,12 @@
 $Id$
 
+2014-04-28  Douglas Gilbert  <dgilbert@interlog.com>
+
+	scsicmds.h, scsicmds.cpp, scsiprint.h:
+	- improve handling of modern SCSI disks (SAS SSDs)
+	  show compliance (SCSI version), show 12 Gbps SAS-3
+	  speed, and flag ZBC presence
+
 2014-04-27  Alex Samorukov  <samm@os2.kiev.ua>
 
 	drivedb.h:
